--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by SUKRITI , Manoranjan ,Yakshith and Suresh </h1>
-    <p class="lead">Welcome Team --- Good Morning DAN</p>
+    <h1>This is developed by Nadia comel, Qamarina, Azra, Iman</h1>
+    <p class="lead">Bye Bipeen</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
